--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CommuNexis | شركة الوصايا الخمس للتجارة</title>
     
+    <!-- === SEO Meta Tags (NEW) === -->
+    <meta name="description" content="شركة كوميونيكسس (الوصايا الخمس) رائدة في التحول الرقمي بالرياض. نقدم حلول بلوكتشين، أنظمة ERP، وتصميم مواقع وتطبيقات.">
+    <meta name="keywords" content="بلوكتشين, أنظمة ERP, تصميم مواقع, تصميم تطبيقات, تحول رقمي, الوصايا الخمس, CommuNexis, الرياض, السعودية, Blockchain, ERP Systems, Web Design, App Design, Digital Transformation, Riyadh, Saudi Arabia">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.alwasaya.com/">
+
+    <!-- Hreflang Tags for Bilingual Content -->
+    <link rel="alternate" hreflang="ar" href="https://www.alwasaya.com/" />
+    <link rel="alternate" hreflang="en" href="https://www.alwasaya.com/" />
+    <link rel="alternate" hreflang="x-default" href="https://www.alwasaya.com/" />
+
+    <!-- Open Graph / Facebook (for social sharing) -->
+    <meta property="og:title" content="CommuNexis | الوصايا الخمس - حلول تقنية متكاملة">
+    <meta property="og:description" content="شركة كوميونيكسس رائدة في التحول الرقمي بالرياض. نقدم حلول بلوكتشين، أنظمة ERP، وتصميم مواقع وتطبيقات.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.alwasaya.com/">
+    <meta property="og:image" content="https://placehold.co/1200x630/0c4a6e/ffffff?text=CommuNexis">
+    <meta property="og:locale" content="ar_SA">
+    <meta property="og:locale:alternate" content="en_US">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CommuNexis | الوصايا الخمس - حلول تقنية متكاملة">
+    <meta name="twitter:description" content="شركة كوميونيكسس رائدة في التحول الرقمي بالرياض. نقدم حلول بلوكتشين، أنظمة ERP، وتصميم مواقع وتطبيقات.">
+    <meta name="twitter:image" content="https://placehold.co/1200x630/0c4a6e/ffffff?text=CommuNexis">
+    <!-- === End SEO Meta Tags === -->
+
     <!-- Google Fonts: Cairo for Arabic, Inter for English -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
